# eos-gates

./: .editorconfig  .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  eos-gates-linux-package.in  eos-gates-windows.in  eos-gates.gresource.xml  eos-gates.in  meson.build
.tx/: config
data/: com.endlessm.Gates.LinuxPackage.desktop.in.in  com.endlessm.Gates.Windows.desktop.in.in  com.endlessm.Gates.desktop.in  eos-gates.css  meson.build
debian/: changelog  control  copyright
po/: POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  eos-gates.pot  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fy.po  ga.po  gd.po  (+80 more)
src/: config.js.in  eos_gates.js  eos_gates_linux_package.js  eos_gates_windows.js  meson.build  replacements.js  window.ui
